<resources>
    <string name="app_name">Мой диплом</string>
    <string name="title_options">Options</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="content">Content</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_fragment">Edit Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="save">Save</string>
    <string name="to_wall">VK wall</string>
    <string name="to_group">VK group</string>
    <string name="type_your_message">Type your message</string>
    <string name="auth">Авторизуйтесь</string>
    <string name="login">Войти</string>
    <string name="logout">Выйти</string>
    <string name="VKService">VKService</string>
    <string name="FacebookService">FacebookService</string>
    <string name="title">Title</string>
    <string name="delete">delete</string>
    <integer name="com_vk_sdk_AppId">6306094</integer>
    <string name="facebook_app_id">181563109102651</string>
    <string name="fb_login_protocol_scheme">fb181563109102651</string>

</resources>
