<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #151928">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        tools:context="com.example.enes.materialdesignfromgoogle.fragments.EditFragment">

        <!-- TODO: Update blank fragment layout -->


        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/type_your_message"
            android:inputType="textMultiLine|textImeMultiLine"
            android:lines="15"
            android:textColor=" #f3f3f5"
            android:textColorHint="#f3f3f5"
            app:layout_constraintBottom_toTopOf="@+id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle"
            app:layout_constraintVertical_bias="0.166" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="332dp"
            android:layout_height="261dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="224dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_insert_photo"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/insertButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#2196f3"
            app:layout_constraintBottom_toTopOf="@+id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.689"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text"
            app:layout_constraintVertical_bias="0.816"
            app:srcCompat="@drawable/ic_insert_photo"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/photoButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#2196f3"
            app:layout_constraintBottom_toTopOf="@+id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.847"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text"
            app:layout_constraintVertical_bias="0.811"
            app:srcCompat="@drawable/ic_photo_camera" />


        <EditText
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textColor="#fafbfc"
            android:textColorHint="#f3f3f5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:layout_marginBottom="39dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">


            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background=" #2196f3"
                android:text="@string/save"
                android:textColor="#fafbfc" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</ScrollView>